# aptosbft

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Makefile  PRODUCTION_READINESS_VERIFICATION.md  README.md  build-aptosbft.sh  cobertura.xml  main.rs
config/: aptosbft.toml.example
consensus-core/: Cargo.toml
consensus-core/src/: lib.rs  types.rs  vote_extensions.rs
consensus-core/src/consensus/: mod.rs  reconfig.rs  runtime.rs  state_sync.rs
consensus-core/src/crypto/: mod.rs  signature_aggregator.rs
consensus-core/src/dag/: driver.rs  mod.rs  ordering.rs  store.rs  testing.rs  types.rs
consensus-core/src/epoch_manager/: mod.rs
consensus-core/src/liveness/: mod.rs  pacemaker.rs  proposer.rs
consensus-core/src/network/: mod.rs
consensus-core/src/pipeline/: mod.rs
consensus-core/src/proposal/: generator.rs  mod.rs
consensus-core/src/round_manager/: mod.rs
consensus-core/src/safety_rules/: mod.rs  recovery.rs  state.rs  two_chain.rs
consensus-core/src/state/: mod.rs  round_state.rs
consensus-core/src/testing/: mock_block.rs  mock_types.rs  mock_validator.rs  mock_vote.rs  mod.rs
consensus-core/src/timeout/: mod.rs  two_chain.rs
consensus-core/src/votes/: mod.rs  pending_votes.rs
consensus-core/tests/: consensus_integration.rs  coverage_comprehensive.rs  dag_integration.rs  dag_network_pipeline_coverage.rs  liveness_integration.rs  quorum_safety.rs  safety_comprehensive.rs
consensus-grpc-protos/: Cargo.toml  build.rs
consensus-grpc-protos/src/: lib.rs
consensus-grpc-server/: Cargo.toml
consensus-grpc-server/src/: error.rs  lib.rs  server.rs  service.rs
consensus-traits/: Cargo.toml
consensus-traits/src/: block.rs  core.rs  dag.rs  lib.rs  network.rs  proposer.rs  safety.rs  storage.rs  vote_extension.rs
docker/: docker-compose.aptosbft.yml
dydx-adapter/: Cargo.toml
dydx-adapter/src/: dydx_service.rs  error.rs  genesis.rs  ibc_headers.rs  lib.rs  mempool_stream.rs  state_computer.rs  types.rs  vote_extensions.rs
dydx-adapter/src/network/: ERROR_HANDLING.md  mod.rs  peer_config.rs  tcp_network.rs
dydx-adapter/tests/: integration_test.rs
dydx-node/: Cargo.toml  README.md
dydx-node/deploy/: Dockerfile  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml  testnet.sh
dydx-node/deploy/config/: README.md  genesis.json
dydx-node/deploy/config/validator1/: validator_key.json
dydx-node/deploy/config/validator2/: validator_key.json
dydx-node/deploy/config/validator3/: genesis.json  validator_key.json
dydx-node/deploy/config/validator4/: validator_key.json
dydx-node/deploy/grafana/dashboards/: dydx-aptosbft.yml
dydx-node/deploy/grafana/datasources/: prometheus.yml
dydx-node/deploy/prometheus/: prometheus.yml
dydx-node/examples/: README.md  genesis.json  validator_key.json
dydx-node/src/: main.rs  metrics.rs  metrics_server.rs
protos/: consensus_app.proto
