[workspace]
resolver = "2"
members = ["consensus-traits", "consensus-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aptos-labs/aptosbft"
description = "Generic AptosBFT consensus algorithm library"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures = "0.3"
log = "0.4"
bincode = "1.3"
