[workspace]
resolver = "2"
members = [
    "consensus-traits",
    "consensus-core",
    "consensus-grpc-protos",
    "consensus-grpc-server",
    "dydx-adapter",
    "dydx-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aptos-labs/aptosbft"
description = "Generic AptosBFT consensus algorithm library"

[workspace.dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1.40", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Consensus traits
consensus-traits = { path = "./consensus-traits" }
