[package]
name = "consensus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
consensus-traits = { path = "../consensus-traits" }
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
futures.workspace = true
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
bincode.workspace = true
serde_json = "1.0"
