[package]
name = "consensus-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trait definitions for generic AptosBFT consensus"

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
