[package]
name = "dydx-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dYdX adapter for AptosBFT consensus integration"

[dev-dependencies]
tempfile = "3.10"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
hex = "0.4"
chrono = "0.4"
ed25519-dalek = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }

consensus-grpc-protos = { path = "../consensus-grpc-protos" }
consensus-grpc-server = { path = "../consensus-grpc-server" }
consensus-traits = { path = "../consensus-traits" }
