[package]
name = "dydxaptosbft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "dYdX AptosBFT consensus node binary"

[[bin]]
name = "dydxaptosbft"
path = "src/main.rs"

[dependencies]
# AptosBFT consensus
consensus-core = { path = "../consensus-core" }
consensus-traits = { path = "../consensus-traits" }
consensus-grpc-server = { path = "../consensus-grpc-server" }
dydx-adapter = { path = "../dydx-adapter" }

# Async runtime
tokio = { workspace = true, features = ["signal"] }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11"

# gRPC
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Encoding
hex = "0.4"

# Cryptography
blake3 = "1.5"
ed25519-dalek = "2.1"

# HTTP server for metrics and health check
hyper = { version = "1.0", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-util = "0.7"
